# eye-control-mouse

./: .gitignore  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  INDEX.md  INSTALL.md  LICENSE  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  USAGE.md  build_installer.py  pyproject.toml  requirements.txt  setup.py
