[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eyemouse"
version = "0.1.0"
description = "Eye-controlled mouse using webcam and gaze tracking"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Eye Control Mouse Contributors"}
]
keywords = ["eye-tracking", "gaze", "accessibility", "mouse-control", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.8",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "PyQt6>=6.6.0",
    "pykalman>=0.9.7",
    "attrs>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",
]

[project.scripts]
eyemouse = "eyemouse.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"
